@@ -762,6 +762,7 @@ regress/lights_ref.asc svneol=native#text/plain
 regress/main.sh svneol=native#text/x-sh
 regress/master_fetch.sh svneol=native#text/x-sh
 regress/master_prep.sh svneol=native#text/x-sh
+regress/mged.sh svneol=native#text/x-sh
 regress/moss.sh svneol=native#text/x-sh
 regress/mosspix.asc svneol=native#text/plain
 regress/nightly.sh svneol=native#text/x-sh
